1.3.4 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #11266: ezcQueryExpression->in( 'colname', array() ) produces a
  strange exception message.


1.3.3 - Wednesday 05 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #12152: The SQLite's unixTimestamp() expression function
  implementation uses the current UTC offset, instead of the UTC offset that
  belongs to the date for which a Unix timestamp should be generated.


1.3.2 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #11345: Encoding problem with Database component (No info about
  it).


1.3.1 - Monday 12 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11609: Subselect query documentation is incorrect.
- Fixed issue #11687: Mssql DSN with port does not work.
- Fixed issue #11700: Subselects only work when there is a database instance
  set.


1.3 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documentation updates.


1.3rc1 - Monday 25 June 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10884: Database: Limit in Oracle only works with 1000 elements
  at maximum.
- Fixed issue #10937: ezcDbHandler::hasFeature() is not implemented properly
  anywhere.
- Fixed issue #10943: Add parameter to specify type of value in bindValue() 
  and bindParam().
- Fixed issue #10986: in() expression test for sub selects fails in PHP 5.1.6.
- Documentation fixes and updates.


1.3beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10802: MSSql handler misses identifierQuoteChars.
- Fixed issue #10803: Format of ezcQueryExpressionMssql::now().